--- a/templates/header.html
+++ b/templates/header.html
@@ -1,4 +1,10 @@
 <header>
+
   <h1 class="logo"><a href="{{ url_for('root') }}">IT3S</a></h1>
   <h2 class="tagline">{{ gettext('Tecnologia, colaboração e desenvolvimento territorial sustentável') }}</h2>
+
+  <!-- NAVBAR -->
+  {% include('navbar.html') %}
+  <!-- /NAVBAR -->
+
 </header>
