--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,9 @@
   <head>
 
     <meta charset="utf-8" />
+    {% if page %}
+    <link rel="canonical" href="{{ url_for('page', path=remove_l10n_prefix(page.path)) }}" />
+    {% endif %}
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon" />
     <!--[if lt IE 9]> {# Le HTML5 shim, for IE6-8 support of HTML5 elements #}
       <script src="{{ url_for('static', filename='lib/html5.js') }}"></script>
