--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
     <link rel="canonical" href="{{ url_for('page', path=remove_l10n_prefix(page.path)) }}" />
     {% endif %}
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon" />
+    <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet" type="text/css" />
     <!--[if lt IE 9]> {# Le HTML5 shim, for IE6-8 support of HTML5 elements #}
       <script src="{{ url_for('static', filename='lib/html5.js') }}"></script>
     <![endif]-->
@@ -22,8 +23,10 @@
     <!-- /HEADER -->
 
     <!-- CONTENT -->
-    {% block content %}
-    {% endblock content %}
+    <section class="main content">
+      {% block content %}
+      {% endblock content %}
+    </section>
     <!-- /CONTENT -->
 
     <!-- FOOTER -->
