--- a/static/css/style.less
+++ b/static/css/style.less
@@ -68,6 +68,10 @@ header.main {
                 margin: 0px;
                 padding: 0px;
 
+                &.hidden {
+                    display: none;
+                }
+
                 a {
                     display: inline-block;
                     width: 100%;
@@ -77,7 +81,8 @@ header.main {
                     font-weight: bold;
                     text-decoration: none;
 
-                    &:hover {
+                    &:hover,
+                    &.active {
                         border-top: 3px solid #f39200;
                         color: black;
                         background: #fee6c8;
