--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -4,9 +4,9 @@
   {% for key, section in tree.get('pt_BR', {}).items() recursive %}
     {% if not key == 'index' %}
       {% if not section.path and 'index' in section %}
-        {% with page = section['index'] %}
-        <li class="{% if not page.meta.get('menu', True) %}hidden{% endif %}">
-          <a href="{{ url_for('page', path=remove_l10n_prefix(page.path)) }}">{{ page.menu_title or page.title }}</a>
+        {% with _page = section['index'] %}
+        <li class="{% if not _page.meta.get('menu', True) %} hidden {% endif %}">
+          <a class="{% if _page.path in page.path %} active {% endif %}" href="{{ url_for('page', path=remove_l10n_prefix(_page.path)) }}">{{ _page.menu_title or _page.title }}</a>
         {% endwith %}
       {% else %}
       <li>
