--- a/static/css/style.less
+++ b/static/css/style.less
@@ -10,13 +10,17 @@
 
 body {
     font-family: Cambria, Georgia, serif;
-    font-size: 0.9em;
+    font-size: 0.8em;
+}
+
+p {
+    font-family:Calibri, "Trebuchet MS", Verdana, sans-serif;
 }
 
 header.main,
 section.content.main,
 footer.main {
-    width: 960px;
+    width: 850px;
     margin: 0 auto;
 }
 
@@ -26,7 +30,7 @@ footer.main {
  * ------
  */
 header.main {
-    margin-top: 50px;
+    margin-top: 40px;
 
     .logo {
         display: inline-block;
@@ -45,7 +49,7 @@ header.main {
 
     .tagline {
         display: inline-block;
-        width: 650px;
+        width: 450px;
         margin: 0px 0px 0px 50px;
         vertical-align: bottom;
         font-size: 1.65em;
@@ -168,7 +172,7 @@ footer.main {
     border-top: solid 1px #aaa;
     margin-top: 50px;
     padding: 10px 30px;
-    font-size: 0.8em;
+    font-size: 0.9em;
 
     &,
     a {
@@ -241,4 +245,33 @@ footer.main {
             }
         }
     }
+}
+
+/*
+ * Pages
+ * -----
+ */
+
+section.main.content {
+
+    /*
+     * Sobre
+     * -----
+     */
+    &#sobre {
+        > p.content {
+            margin-bottom: 70px;
+        }
+
+        img.visao {
+          float: right;
+          margin: 0px 25px;
+        }
+
+        img.missao {
+          float: left;
+          margin: 0px 25px;
+        }
+    }
+
 }
