--- a/static/css/style.less
+++ b/static/css/style.less
@@ -10,7 +10,7 @@
 
 body {
     font-family: Cambria, Georgia, serif;
-    font-size: 0.8em;
+    font-size: 0.9em;
 }
 
 p {
@@ -20,7 +20,7 @@ p {
 header.main,
 section.content.main,
 footer.main {
-    width: 850px;
+    width: 900px;
     margin: 0 auto;
 }
 
@@ -65,7 +65,7 @@ header.main {
 
     .tagline {
         display: inline-block;
-        width: 450px;
+        width: 500px;
         margin: 0px 0px 0px 50px;
         vertical-align: bottom;
         font-size: 1.65em;
@@ -198,14 +198,14 @@ footer.main {
             display: block;
             margin: 0px 0px 15px;
             padding-left: 20px;
-            background: url(../images/icons/address.png) no-repeat 0px 3px;
+            background: url(../images/icons/address.png) no-repeat;
         }
 
         .phone {
             display: inline-block;
             min-height: 20px;
             padding-left: 20px;
-            background: url(../images/icons/phone.png) no-repeat 2px 3px;
+            background: url(../images/icons/phone.png) no-repeat 2px;
         }
 
         .email {
@@ -213,7 +213,7 @@ footer.main {
             min-height: 20px;
             margin-left: 8px;
             padding-left: 20px;
-            background: url(../images/icons/email.png) no-repeat 0px 3px;
+            background: url(../images/icons/email.png) no-repeat 0px;
         }
     }
 
