--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,7 +9,7 @@
 }
 body {
   font-family: Cambria, Georgia, serif;
-  font-size: 0.8em;
+  font-size: 0.9em;
 }
 p {
   font-family: Calibri, "Trebuchet MS", Verdana, sans-serif;
@@ -17,7 +17,7 @@ p {
 header.main,
 section.content.main,
 footer.main {
-  width: 850px;
+  width: 900px;
   margin: 0 auto;
 }
 /*
@@ -57,7 +57,7 @@ header.main .logo a {
 }
 header.main .tagline {
   display: inline-block;
-  width: 450px;
+  width: 500px;
   margin: 0px 0px 0px 50px;
   vertical-align: bottom;
   font-size: 1.65em;
@@ -171,20 +171,20 @@ footer.main .contact .address {
   display: block;
   margin: 0px 0px 15px;
   padding-left: 20px;
-  background: url(../images/icons/address.png) no-repeat 0px 3px;
+  background: url(../images/icons/address.png) no-repeat;
 }
 footer.main .contact .phone {
   display: inline-block;
   min-height: 20px;
   padding-left: 20px;
-  background: url(../images/icons/phone.png) no-repeat 2px 3px;
+  background: url(../images/icons/phone.png) no-repeat 2px;
 }
 footer.main .contact .email {
   display: inline-block;
   min-height: 20px;
   margin-left: 8px;
   padding-left: 20px;
-  background: url(../images/icons/email.png) no-repeat 0px 3px;
+  background: url(../images/icons/email.png) no-repeat 0px;
 }
 footer.main .supporters {
   display: inline-block;
