--- a/templates/page.html
+++ b/templates/page.html
@@ -2,4 +2,6 @@
 
 {% block content %}
 {{ page }}
+<script src="{{ url_for('static', filename='js/tablist.js') }}"></script>
 {% endblock content %}
+
