--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
     <!--[if lt IE 9]> {# Le HTML5 shim, for IE6-8 support of HTML5 elements #}
       <script src="{{ url_for('static', filename='lib/html5.js') }}"></script>
     <![endif]-->
+    <script src="{{ url_for('static', filename='lib/jquery.js') }}"></script>
     <title>IT3S - {{ page.title or gettext('Instituto de Fomento à Tecnologia do Terceiro Setor') }}</title>
 
   </head>
