--- a/static/css/style.less
+++ b/static/css/style.less
@@ -308,6 +308,16 @@ section.main.content {
             }
         }
 
+        .destaque {
+            width: 55%;
+            margin: 25px auto 15px;
+            padding: 15px;
+            border: solid 3px #8296a2;
+            border-radius: 10px;
+            font-size: 1.1em;
+            font-weight: bold;
+        }
+
         > ul.tablist {
             border-bottom: solid 2px #dcdcdc;
             font-family: Cambria, Georgia, serif;
@@ -444,14 +454,25 @@ section.main.content {
      * ---------------------------------
      */
      &#parceiros-financeiros {
-        .doador {
-            width: 55%;
-            margin: 25px auto 15px;
-            padding: 15px;
-            border: solid 3px #8296a2;
-            border-radius: 10px;
-            font-size: 1.1em;
-            font-weight: bold;
-        }
+     }
+
+    /*
+     * Parcerias > Parceiros de divulgacao
+     * -----------------------------------
+     */
+     &#parceiros-divulgacao {
+         .destaque {
+            width: 70%;
+         }
+     }
+
+    /*
+     * Parcerias > Parceiros tecnicos
+     * -----------------------------------
+     */
+     &#parceiros-tecnicos {
+         .destaque {
+            width: 70%;
+         }
      }
 }
